--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@
  * =================================================================== */
 
  .section-image {
- 	background: #151515 url(https://images.unsplash.com/photo-1456983933114-c22026990f4b?dpr=2&auto=format&crop=entropy&fit=crop&w=1280&h=720&q=80) no-repeat center center;
+ 	background: #151515 url(https://github.com/aemoore62/resume/blob/gh-pages/images/IMGP8685.JPG?raw=true) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
