--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@
  * =================================================================== */
 
  .section-image {
- 	background: #151515 url(../IMGP8685.JPG) no-repeat center center;
+ 	background: #151515 url(../images/IMGP8685.JPG) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
