--- a/css/style.css
+++ b/css/style.css
@@ -432,18 +432,18 @@ html, body {
 
 .carousel {
     position: relative;
-    box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
+    /*box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);*/
     margin-top: 26px;
 }
 
 .carousel-inner {
     position: relative;
     overflow: hidden;
-    width: 50%;
+    width: 40%;
 }
 
 .carousel-inner > .item > img, .carousel-inner > .item > a > img {
-    width: 50%;
+    width: 40%;
 }
 
 .carousel-open:checked + .carousel-item {
