--- a/css/style.css
+++ b/css/style.css
@@ -463,7 +463,7 @@ html, body {
 .carousel-item img {
     display: block;
     height: auto;
-    max-width: 100%;
+    /*max-width: 100%;*/
 }
 
 .carousel-control {
