--- a/css/style.css
+++ b/css/style.css
@@ -450,12 +450,21 @@ html, body {
     opacity: 0;
     -webkit-transition: opacity 0.6s ease-out;
     transition: opacity 0.6s ease-out;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .carousel-item img {
     display: block;
     height: 25%;
     max-width: 100%;
+}
+
+.carousel-item:before {
+  content: "";
+  display: block;
+  padding-bottom: 56.25%; /* example */
 }
 
 .carousel-control {
