--- a/css/style.css
+++ b/css/style.css
@@ -453,18 +453,16 @@ html, body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100%;
+    height: 300px;
 }
 
 .carousel-item img {
     display: block;
-    height: 25%;
     max-width: 100%;
-}
-
-.carousel-item:before {
-  content: "";
-  display: block;
-  padding-bottom: 56.25%; /* example */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .carousel-control {
