--- a/css/style.css
+++ b/css/style.css
@@ -420,8 +420,6 @@ column-gap: 5px;
 
 
 
-
-
 html, body {
     margin: 0px;
     padding: 0px;
@@ -450,19 +448,18 @@ html, body {
     opacity: 0;
     -webkit-transition: opacity 0.6s ease-out;
     transition: opacity 0.6s ease-out;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 300px;
+    
 }
 
 .carousel-item img {
     display: block;
+    height: auto;
     max-width: 100%;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: 250px;
+    margin: auto;
+ 
+  	background-size: cover;
+  	background-position: center center;
 }
 
 .carousel-control {
@@ -536,6 +533,13 @@ html, body {
 #carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet,
 #carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet {
     color: #428bca;
+}
+
+.carousel-item h1 {
+  	margin: 0;
+    color: black;
+    text-align:center;
+    
 }
 
 #title {
