--- a/css/style.css
+++ b/css/style.css
@@ -467,15 +467,16 @@ html, body {
     border-radius: 50%;
     color: #fff;
     cursor: pointer;
-    display: none;
+    display: block; /* Change from 'none' to 'block' to make them visible */
     font-size: 40px;
     height: 40px;
     line-height: 35px;
     position: absolute;
     top: 50%;
-    -webkit-transform: translate(0, -50%);
+    transform: translateY(-50%); /* Vertically center the controls */
+    /*-webkit-transform: translate(0, -50%); */
     cursor: pointer;
-    -ms-transform: translate(0, -50%);
+    /*-ms-transform: translate(0, -50%);*/
     transform: translate(0, -50%);
     text-align: center;
     width: 40px;
