--- a/css/style.css
+++ b/css/style.css
@@ -416,16 +416,6 @@ column-gap: 5px;
 
 
 
-
-
-
-
-html, body {
-    margin: 0px;
-    padding: 0px;
-    background: url("http://digital.bnint.com/filelib/s9/photos/white_wood_4500x3000_lo_res.jpg");
-}
-
 .carousel {
     position: relative;
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
@@ -453,11 +443,9 @@ html, body {
 
 .carousel-item img {
     display: block;
-    height: auto;
     max-width: 100%;
     height: 250px;
     margin: auto;
- 
   	background-size: cover;
   	background-position: center center;
 }
@@ -467,16 +455,15 @@ html, body {
     border-radius: 50%;
     color: #fff;
     cursor: pointer;
-    display: block; /* Change from 'none' to 'block' to make them visible */
+    display: none; /* Change from 'none' to 'block' to make them visible */
     font-size: 40px;
     height: 40px;
     line-height: 35px;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%); /* Vertically center the controls */
-    /*-webkit-transform: translate(0, -50%); */
+    -webkit-transform: translate(0, -50%); 
     cursor: pointer;
-    /*-ms-transform: translate(0, -50%);*/
+    -ms-transform: translate(0, -50%);
     transform: translate(0, -50%);
     text-align: center;
     width: 40px;
