--- a/css/carousel.css
+++ b/css/carousel.css
@@ -62,6 +62,8 @@ html, body {
         position: absolute;
         top: 50%;
         transform: TranslateY(-50%);
+        width: 5vw;
+        height: 5vw;
      }
 
 .carousel-control.prev {
