--- a/css/carousel.css
+++ b/css/carousel.css
@@ -8,6 +8,7 @@ html, body {
     position: relative;
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
     margin-top: 26px;
+    width: 100px
 }
 
 .carousel-inner {
