--- a/css/carousel.css
+++ b/css/carousel.css
@@ -8,7 +8,7 @@ html, body {
     position: relative;
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
     margin-top: 26px;
-    width: 100px
+    
 }
 
 .carousel-inner {
@@ -59,12 +59,21 @@ html, body {
     z-index: 10;
 }
 
+
+carousel-control-next-icon, .carousel-control-prev-icon {
+    display: inline-block;
+    background: transparent no-repeat center center;
+    background-size: 100% 100%;
+    height: 100px !important;
+    width: 100px !important;
+}
+
+
 .carousel-control-prev , .carousel-control-next {
         position: absolute;
         top: 50%;
         transform: TranslateY(-50%);
-        width: 5vw;
-        height: 5vw;
+        width: 40px;
      }
 
 .carousel-control.prev {
