--- a/css/carousel.css
+++ b/css/carousel.css
@@ -4,6 +4,7 @@ html, body {
     background: url("http://digital.bnint.com/filelib/s9/photos/white_wood_4500x3000_lo_res.jpg");
 }
 
+
 .carousel {
     position: relative;
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
@@ -107,6 +108,8 @@ carousel-control-next-icon, .carousel-control-prev-icon {
     right: 0;
     text-align: center;
     z-index: 10;
+    align-content: center;
+    justify-content: center;
 }
 
 .carousel-indicators li {
@@ -132,7 +135,7 @@ carousel-control-next-icon, .carousel-control-prev-icon {
     color: #428bca;
 }
 
-.carousel-item h1 {
+.carousel-item p {
   	margin: 0;
     color: black;
     text-align:center;
