--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,10 +1,3 @@
-
-
-.carousel-item img {
-    display: block;
-    max-width: 100%;
+img {
     height: 250px;
-    margin: auto;
-  	background-size: cover;
-  	background-position: center center;
 }
